# xgen-usd

./: .gitignore  CMakeLists.txt  LICENSE  package.py
cmake/: USDPluginTools.cmake
doc/: SdfValueTypeNames.txt
pxr/: CMakeLists.txt
pxr/usd/usdGeom/: CMakeLists.txt  api.h  generatedSchema.usda  make.bat  make.sh  plugInfo.json  schema.usda  tokens.cpp  tokens.h  wrapTokens.cpp  wrapXGen.cpp  xGen.cpp  xGen.h
pxr/usdImaging/: CMakeLists.txt  debugCodes.cpp  debugCodes.h  plugInfo.json  xGenAdapter.cpp  xGenAdapter.h
test/: testXGen.usda
